# pipemonitor

./: Cargo.toml
examples/: demo.rs
src/: main.rs  pipe.rs  ui.rs
